feat(ioloop): replace platform threads with epoll IoLoop + virtual threads (#84)
* feat(ioloop): replace platform threads with epoll IoLoop + virtual threads

Add epoll-backed IoLoop (single platform driver thread + LockSupport
park/unpark), SignalRelay (self-pipe trick via sun.misc.Signal), and
Foreground supervisor (StructuredTaskScope for structured concurrency).

Convert all explicit `new Thread(...)` spawns in InternalConsole (3) and
EventsCommand (1) to `Thread.ofVirtual()`, eliminating platform thread
allocation on the container I/O hot path.

* perf(ioloop): limit virtual thread carrier pool to 1 thread

The container runtime's concurrent I/O tasks (PTY relay, signal
forwarding, process wait) spend most of their time parked via
LockSupport.park — a single carrier thread is sufficient to run the
brief code between unpark and the next park. This keeps the OS thread
count to 2 (1 carrier + 1 IoLoop driver) instead of core_count + 1.

* refactor(ioloop): eliminate driver thread — calling thread drives epoll

The platform thread that calls Foreground.supervise() was idling on
scope.join() while a separately spawned driver thread ran epoll_wait.
Now the calling thread runs the IoLoop directly, and the process-exit
subtask calls io.shutdown() to break the loop. No platform thread is
spawned; OS thread count is caller + 1 carrier (parallelism=1).

* fix(ioloop): wire Foreground.supervise into RunCommand and fix shutdown hang

RunCommand now delegates PTY relay + process wait to Foreground.supervise()
instead of InternalConsole.startIOCopy() + Wait.waitForChild(). IoLoop.awaitEvent
checks the closed flag before parking to prevent virtual threads from blocking
forever after shutdown. GeneratedForeignFeature dynamically discovers NativeH_*
split classes instead of hardcoding them.

* fix(ioloop): wakeup pipe eliminates 50ms shutdown delay + fix awaitEvent race

epoll_wait blocked up to DRIVER_TIMEOUT_MS (50ms) after shutdown() because
nothing woke the driver. Add a pip