@@ -26,7 +26,7 @@ import java.nio.file.Path;
  */
 public final class InternalConsole {
     private final String socketPath;
-    private volatile int masterFd = -1;
+    volatile int masterFd = -1;
     private volatile boolean stopped;
     private Thread listenerThread;
     private Thread ioThread;
@@ -37,6 +37,9 @@ public final class InternalConsole {
 
     /** Console socket path that should be passed to CreateCommand. */
     public String socketPath() { return socketPath; }
+
+    /** The PTY master fd received via SCM_RIGHTS, or -1 if not yet received. */
+    public int masterFd() { return masterFd; }
 
     /**
      * Create an internal console socket for foreground {@code runc run}. The
@@ -53,11 +56,13 @@ public final class InternalConsole {
 
     /**
      * Start a thread that listens on the socket, accepts one connection, and
-     * receives the PTY master fd via SCM_RIGHTS. The master fd is stashed for
-     * {@link #startIOCopy()} to pick up.
+     * receives the PTY master fd via SCM_RIGHTS. The master fd is stashed in
+     * {@link #masterFd}.
      */
     public void startListening() {
-        listenerThread = new Thread(() -> {
+        listenerThread = Thread.ofVirtual()
+                .name("internal-console-listener")
+                .start(() -> {
             try (Arena arena = Arena.ofConfined()) {
                 int listenFd = PosixIO.socket(Constants.AF_UNIX, Constants.SOCK_STREAM, 0);
                 if (listenFd < 0) {
@@ -93,9 +98,7 @@ public final class InternalConsole {
                     Logger.warn("internal console: failed to receive master fd");
                 }
             }
-        }, "internal-console-listener");
-        listenerThread.setDaemon(true);
-        listenerThread.start();
+        });
     }
 
     /** Wait for the listener thread to complete (connection established). */
@@ -119,21 +122,12 @@ public final class InternalConsole {
     }
 
     /**
-     * Start I/O copying between the PTY master and the caller's stdin/stdout.
-     * Returns immediately; copying runs in background threads. Call
-     * {@link #stop()} after the container exits to clean up.
-     */
-    public void startIOCopy() {
-        if (masterFd < 0) return;
-        ioThread = startIOCopyForFd(masterFd);
-    }
-
-    /**
-     * Start I/O copying for a given master fd (used by both run and exec paths).
+     * Start I/O copying for a given master fd (used by exec path).
      */
     public static Thread startIOCopyForFd(int masterFd) {
-        // master → stdout thread (the important direction for bats tests).
-        Thread reader = new Thread(() -> {
+        Thread reader = Thread.ofVirtual()
+                .name("pty-to-stdout")
+                .start(() -> {
             try (Arena arena = Arena.ofConfined()) {
                 byte[] buf = new byte[8192];
                 while (true) {
@@ -143,12 +137,11 @@ public final class InternalConsole {
                     System.out.flush();
                 }
             } catch (Exception ignored) {}
-        }, "pty-to-stdout");
-        reader.setDaemon(true);
-        reader.start();
+        });
 
-        // stdin → master thread (for interactive use).
-        Thread writer = new Thread(() -> {
+        Thread.ofVirtual()
+                .name("stdin-to-pty")
+                .start(() -> {
             try (Arena arena = Arena.ofConfined()) {
                 byte[] buf = new byte[4096];
                 while (true) {
@@ -158,9 +151,7 @@ public final class InternalConsole {
                     PosixIO.write(arena, masterFd, chunk);
                 }
             } catch (Exception ignored) {}
-        }, "stdin-to-pty");
-        writer.setDaemon(true);
-        writer.start();
+        });
 
         return reader;
     }
